[gd_scene load_steps=31 format=2]

[ext_resource path="res://background.png" type="Texture" id=1]
[ext_resource path="res://caster.png" type="Texture" id=2]
[ext_resource path="res://light.png" type="Texture" id=3]
[ext_resource path="res://spot.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://sound/Powerup21.wav" type="AudioStream" id=6]
[ext_resource path="res://ka1.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://game.gd" type="Script" id=8]
[ext_resource path="res://player.gd" type="Script" id=9]
[ext_resource path="res://sound/smiler.ogg" type="AudioStream" id=10]
[ext_resource path="res://sound/menu.ogg" type="AudioStream" id=11]
[ext_resource path="res://sound/Hit_Hurt47.wav" type="AudioStream" id=12]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -15.913, -15.9738, 15.9079, -16.0785, 15.6986, 15.847, -16.1223, 15.9517 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("infotext:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("infotext2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("infotext3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "lowLife"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("player/char:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.4, 0.0, 0.4, 0.0, 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/char:mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0 ]
}

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Animation" id=5]
length = 16.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8, 12 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 159.289, 452.441 ), Vector2( 132.279, 80.4366 ), Vector2( 700.722, 241.27 ), Vector2( 429.392, 571.532 ) ]
}

[sub_resource type="Animation" id=6]
length = 16.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.1, 8.1, 11.8 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 753.756, 314.336 ), Vector2( 69.7562, 234.336 ), Vector2( 256.756, 575.336 ), Vector2( 516.756, 530.336 ) ]
}

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1

[sub_resource type="Animation" id=9]
length = 16.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.1, 7.9, 12.1 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 692.078, 29.8849 ), Vector2( 309.606, 31.5551 ), Vector2( 40.7064, 238.658 ), Vector2( 685.397, 282.082 ) ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 34.4935
height = 4.7616

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=18]
size = 52
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=12]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 17
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 41.0585, 42.7799 )

[sub_resource type="Animation" id=15]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.6, 4, 5.8, 7.5, 8.6, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 848, 48 ), Vector2( 848, 100 ), Vector2( 848, 552 ), Vector2( 848, 552 ), Vector2( 848, 300 ), Vector2( 848, 552 ), Vector2( 848, 50 ), Vector2( 848, 48 ) ]
}

[sub_resource type="Animation" id=16]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 848, 48 ), Vector2( 848, 100 ), Vector2( 848, 552 ), Vector2( 848, 48 ) ]
}

[sub_resource type="Animation" id=17]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 848, 48 ), Vector2( 848, 552 ), Vector2( 848, 48 ) ]
}

[node name="LightShadows" type="Node2D"]
script = ExtResource( 8 )

[node name="Ambient" type="CanvasModulate" parent="."]
color = Color( 0.156863, 0.0588235, 0.0588235, 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 401.251, 301.906 )
scale = Vector2( 128, 128 )
texture = ExtResource( 1 )

[node name="Casters" type="Node2D" parent="."]
visible = false

[node name="ShadowCaster2" type="Sprite" parent="Casters"]
position = Vector2( 76.2909, 405.319 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster2"]
occluder = SubResource( 1 )

[node name="ShadowCaster3" type="Sprite" parent="Casters"]
position = Vector2( 348.291, 206.319 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster3"]
occluder = SubResource( 1 )

[node name="ShadowCaster4" type="Sprite" parent="Casters"]
position = Vector2( 239.291, 48.3186 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster4"]
occluder = SubResource( 1 )

[node name="ShadowCaster5" type="Sprite" parent="Casters"]
position = Vector2( 140.291, 561.319 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster5"]
occluder = SubResource( 1 )

[node name="ShadowCaster6" type="Sprite" parent="Casters"]
position = Vector2( 392.291, 499.319 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster6"]
occluder = SubResource( 1 )

[node name="ShadowCaster8" type="Sprite" parent="Casters"]
position = Vector2( 661.291, 371.319 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster8"]
occluder = SubResource( 1 )

[node name="ShadowCaster9" type="Sprite" parent="Casters"]
position = Vector2( 567.291, 574.319 )
texture = ExtResource( 2 )

[node name="occluder" type="LightOccluder2D" parent="Casters/ShadowCaster9"]
occluder = SubResource( 1 )

[node name="ShadowCaster10" type="Sprite" parent="Casters"]
position = Vector2( 420.291, 350.319 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster10"]
occluder = SubResource( 1 )

[node name="ShadowCaster11" type="Sprite" parent="Casters"]
position = Vector2( 463.291, 106.319 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster11"]
occluder = SubResource( 1 )

[node name="ShadowCaster12" type="Sprite" parent="Casters"]
position = Vector2( 621.291, 78.3186 )
texture = ExtResource( 2 )

[node name="Occluder" type="LightOccluder2D" parent="Casters/ShadowCaster12"]
occluder = SubResource( 1 )

[node name="UIAnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeinfo = SubResource( 2 )
anims/lowLife = SubResource( 3 )

[node name="infotext" type="RichTextLabel" parent="."]
margin_left = 384.0
margin_top = 330.0
margin_right = 650.0
margin_bottom = 419.0
mouse_filter = 1
text = "Click to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infotext2" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 581.0
margin_right = 209.0
margin_bottom = 605.0
mouse_filter = 1
text = "DohWah Productions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 754, 574 )
stream = ExtResource( 12 )

[node name="pickupSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 754, 574 )
stream = ExtResource( 6 )

[node name="infotext3" type="RichTextLabel" parent="."]
margin_left = 760.0
margin_top = 581.0
margin_right = 805.0
margin_bottom = 605.0
mouse_filter = 1
text = "v1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedLight" type="Light2D" parent="."]
visible = false
position = Vector2( 159.289, 452.441 )
texture = ExtResource( 3 )
color = Color( 1, 0.446392, 0.0576646, 1 )
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.1

[node name="Blob" type="Sprite" parent="RedLight"]
material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RedLight"]
autoplay = "motion"
anims/motion = SubResource( 5 )
anims/motion2 = SubResource( 6 )

[node name="GreenLight" type="Light2D" parent="."]
visible = false
position = Vector2( 186.909, 258.351 )
texture = ExtResource( 3 )
color = Color( 0.49247, 0.878537, 0.409146, 1 )
shadow_enabled = true
shadow_gradient_length = 1.2
shadow_filter = 3
shadow_filter_smooth = 7.1

[node name="blob" type="Sprite" parent="GreenLight"]
material = SubResource( 7 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GreenLight"]
autoplay = "m2"
anims/m2 = SubResource( 6 )
anims/motion = SubResource( 5 )

[node name="BlueLight" type="Light2D" parent="."]
visible = false
position = Vector2( 692.078, 31.1773 )
texture = ExtResource( 3 )
color = Color( 0.396752, 0.446392, 0.929792, 1 )
shadow_enabled = true
shadow_gradient_length = 1.4
shadow_filter = 3
shadow_filter_smooth = 5.3

[node name="blob" type="Sprite" parent="BlueLight"]
material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlueLight"]
autoplay = "motion3"
anims/motion = SubResource( 5 )
anims/motion2 = SubResource( 6 )
anims/motion3 = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 400, 300 )
current = true

[node name="player" type="KinematicBody2D" parent="." groups=[
"player",
]]
position = Vector2( 424, 288 )
input_pickable = true
motion/sync_to_physics = true
script = ExtResource( 9 )

[node name="char" type="Light2D" parent="player"]
position = Vector2( 2, 0 )
texture = ExtResource( 3 )
color = Color( 0.396078, 0.447059, 0.929412, 1 )
shadow_enabled = true
shadow_gradient_length = 1.4
shadow_filter = 3
shadow_filter_smooth = 5.3

[node name="blob" type="Sprite" parent="player/char"]
material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 10 )

[node name="ScoreText" type="RichTextLabel" parent="."]
margin_left = 399.0
margin_top = 6.0
margin_right = 673.0
margin_bottom = 206.0
custom_fonts/normal_font = SubResource( 11 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLogo" type="RichTextLabel" parent="."]
margin_left = 130.0
margin_top = 12.0
margin_right = 772.0
margin_bottom = 205.0
custom_fonts/normal_font = SubResource( 18 )
text = "
         LUX LIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="GameLogo"]
position = Vector2( 496, 91 )
amount = 5
lifetime = 15.0
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 48.48
gravity = Vector2( -50, 0 )

[node name="GameOverText" type="RichTextLabel" parent="."]
visible = false
margin_left = 249.0
margin_top = 255.0
margin_right = 570.0
margin_bottom = 331.0
custom_fonts/normal_font = SubResource( 12 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anykeyText" type="RichTextLabel" parent="GameOverText"]
margin_left = 59.0
margin_top = 50.0
margin_right = 292.0
margin_bottom = 82.0
custom_fonts/normal_font = SubResource( 13 )
text = "Any key to replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrainTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="SpawnPickupTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="SpawnBlockerTimer" type="Timer" parent="."]

[node name="SpawnPickupWaveTimer" type="Timer" parent="."]
wait_time = 25.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 848, 48 )

[node name="pathClearer" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 6.10352e-05, -0.754707 )
scale = Vector2( 1.30365, 1.32724 )
texture = ExtResource( 5 )

[node name="ClearerAnimation" type="AnimationPlayer" parent="."]
anims/fast = SubResource( 15 )
anims/medium = SubResource( 16 )
anims/slow = SubResource( 17 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="MenuMusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
autoplay = true
[connection signal="timeout" from="DrainTimer" to="." method="_on_DrainTimer_timeout"]
[connection signal="timeout" from="SpawnPickupTimer" to="." method="_on_SpawnPickupTimer_timeout"]
[connection signal="timeout" from="SpawnBlockerTimer" to="." method="_on_SpawnBlockerTimer_timeout"]
[connection signal="timeout" from="SpawnPickupWaveTimer" to="." method="_on_SpawnPickupWaveTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
[connection signal="finished" from="MenuMusicPlayer" to="." method="_on_MenuMusicPlayer_finished"]
